fix: minor search context content alignment issues

--- a/src/Arkanis.Overlay.Components/wwwroot/css/shared.css
+++ b/src/Arkanis.Overlay.Components/wwwroot/css/shared.css
@@ -53,6 +53,10 @@
     transition: height 100ms;
 }
 
+.mud-badge {
+    z-index: 100;
+}
+
 .mud-paper:not(.mud-paper-square) .mud-table-root tr:last-of-type > :first-child,
 .mud-expansion-panels:not(.mud-expansion-panels-square) .mud-table-root tr:last-of-type > :first-child {
     border-bottom-left-radius: var(--mud-default-borderradius) !important;
